Трекер задач: управление историей просмотров